<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.welcome.WelcomeFragment">


    <TextView
        android:id="@+id/welcome_title_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_plantapp"
        style="@style/WelcomeTitleStyle"
        android:layout_marginStart="20dp"
        android:layout_marginTop="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome_subtitle_txt"
        style="@style/WelcomeTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.7"
        android:layout_marginTop="8dp"
        android:text="@string/welcome_subtitle_txt"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/welcome_title_txt"
        app:layout_constraintTop_toBottomOf="@+id/welcome_title_txt" />


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/flower_image"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_welcome_flower"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        style="@style/PrimaryButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="16dp"
        android:focusable="true"
        android:clickable="true"
        android:text="@string/get_started_btn_text"
        app:layout_constraintBottom_toTopOf="@+id/bottom_info_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/bottom_info_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:layout_marginHorizontal="44dp"
        android:textAlignment="center"
        style="@style/InfoTextViewStyle"
        android:text="@string/info_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintStart_toStartOf="@+id/button" />


</androidx.constraintlayout.widget.ConstraintLayout>