<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.paywall.PaywallFragment"
    android:background="@color/background_paywall">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/flower_image"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_paywall_flower"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        style="@style/PrimaryButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginBottom="10dp"
        android:text="@string/try_free_for_3_days"
        app:layout_constraintBottom_toTopOf="@+id/bottom_info_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/bottom_info_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/info_paywall_txt"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/bottom_info2_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/bottom_info2_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="19dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/paywall_mock_txt"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/paywallRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/welcome_title_txt"
        style="@style/WelcomeTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paywall_title_txt"
        android:textColor="@color/white"

        app:layout_constraintBottom_toTopOf="@+id/welcome_subtitle_txt"
        app:layout_constraintStart_toStartOf="@+id/welcome_subtitle_txt" />

    <TextView
        android:id="@+id/welcome_subtitle_txt"
        style="@style/WelcomeTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.7"
        android:text="@string/paywall_subtitle_txt"
        android:textColor="@color/white"
        android:layout_marginBottom="24dp"
        android:textSize="16sp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toTopOf="@+id/paywallRecyclerView"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>