<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.home.HomeFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="100dp"
        android:layout_height="1dp"
        app:layout_constraintGuide_percent="0.4">

    </androidx.constraintlayout.widget.Guideline>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:contentDescription="@string/flower_image"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_home_toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/home_title_txt"
            style="@style/GreetingSubtitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/greeting_subtitle_txt"
            app:layout_constraintStart_toStartOf="@+id/home_subtitle_txt"
            app:layout_constraintTop_toBottomOf="@+id/home_subtitle_txt" />

        <TextView
            android:id="@+id/home_subtitle_txt"
            style="@style/GreetingTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="46dp"
            android:text="@string/greeting_title_txt"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <SearchView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/size_20dp"
            android:background="@drawable/rounded_search_background"
            android:iconifiedByDefault="false"
            android:queryHint="Search here..."
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/home_title_txt"
            app:layout_constraintTop_toBottomOf="@+id/home_title_txt" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">


            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmerLayout"
                android:layout_width="match_parent"
                android:layout_height="164dp"
                android:layout_marginHorizontal="@dimen/size_20dp"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mail_const_btn"
                app:shimmer_auto_start="true">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/question_rc_view"
                    android:layout_width="match_parent"
                    android:layout_height="164dp"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_mail"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="80dp">

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.facebook.shimmer.ShimmerFrameLayout>

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmerLayout2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:minHeight="500dp"
                android:layout_marginHorizontal="16dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="24dp"
                app:shimmer_auto_start="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shimmerLayout">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/categories_rc_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </com.facebook.shimmer.ShimmerFrameLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/mail_const_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/size_20dp"
                android:layout_marginTop="24dp"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp"
                android:background="@drawable/rounded_mail_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/image_view_mail"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/flower_image"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_mail"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/mail_title_txt"
                    style="@style/MailButtonTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:text="@string/mail_title_txt"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/image_view_mail"
                    app:layout_constraintTop_toTopOf="@+id/image_view_mail" />

                <TextView
                    android:id="@+id/mail_subtitle_txt"
                    style="@style/MailButtonSubtitleTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:alpha="0.7"
                    android:text="@string/mail_subtitle_txt"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/image_view_mail"
                    app:layout_constraintStart_toEndOf="@+id/image_view_mail"
                    app:layout_constraintTop_toBottomOf="@+id/mail_title_txt" />

                <ImageView
                    android:id="@+id/image_view_right"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/flower_image"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_right"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>